--- a/package.json
+++ b/package.json
@@ -8,14 +8,17 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "base-64": "^0.1.0",
+    "history": "^5.0.0",
     "html-react-parser": "^0.13.0",
     "jquery": "^3.5.1",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router": "^5.2.0",
-    "react-router-dom": "^6.0.0-alpha.5",
-    "react-scripts": "3.4.1"
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "3.4.1",
+    "typescript": "^3.9.5",
+    "zoom-vanilla.js": "^2.0.6"
   },
   "scripts": {
     "dev": "watch 'npm run build' src",
