--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "babel-preset-react": "^6.24.1",
     "base-64": "^0.1.0",
     "history": "^5.0.0",
     "html-react-parser": "^0.13.0",
@@ -43,6 +44,9 @@
     ]
   },
   "devDependencies": {
+    "babel-preset-env": "^1.7.0",
+    "babelify": "^10.0.0",
+    "browserify": "^16.5.1",
     "watch": "^1.0.2"
   }
 }
